Issue #1222770 Lighten the color of the date in month 'overflow' days so it is clearer that they are out of scope for the view.

--- a/css/calendar_multiday.css
+++ b/css/calendar_multiday.css
@@ -298,6 +298,7 @@ table.calendar-legend tr.even .stripe {
 .calendar-calendar td.empty {
   background:#ccc;
   border-color:#ccc;
+  color:#cc9;
 }
 .calendar-calendar table.mini td.empty {
   background:#fff;
